SERVER-29315 Fix `clonable_ptr_test` in UBSAN

The `clonable_ptr_test` has several test cases exclusively dedicated
to verifying the syntax of this component.  These tests trigger
UBSAN errors on creating a reference to a dereferenced null pointer
even though the pointer is never used.  This fix makes the tests
never run (by hiding them behind an if-false block), but still
compile, making them true compile-time-only tests.  This is more
consistent with their intended behavior: syntax testing